--- a/.gitmodules
+++ b/.gitmodules
@@ -1,28 +1,28 @@
 [submodule ".zsh/plugins/zsh-nvm"]
 	path = .zsh/plugins/zsh-nvm
-	url = git@github.com:lukechilds/zsh-nvm.git
+	url = https://github.com/lukechilds/zsh-nvm.git
 [submodule ".zsh/plugins/zsh-completions"]
 	path = .zsh/plugins/zsh-completions
-	url = git@github.com:zsh-users/zsh-completions.git
+	url = https://github.com/zsh-users/zsh-completions.git
 [submodule ".zsh/plugins/zsh-autosuggestions"]
 	path = .zsh/plugins/zsh-autosuggestions
-	url = git@github.com:zsh-users/zsh-autosuggestions.git
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
 [submodule ".zsh/plugins/zsh-history-substring-search"]
 	path = .zsh/plugins/zsh-history-substring-search
-	url = git@github.com:zsh-users/zsh-history-substring-search.git
+	url = https://github.com/zsh-users/zsh-history-substring-search.git
 [submodule ".zsh/plugins/zsh-syntax-highlighting"]
 	path = .zsh/plugins/zsh-syntax-highlighting
-	url = git@github.com:zsh-users/zsh-syntax-highlighting.git
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
 [submodule ".zsh/plugins/dotbare"]
 	path = .zsh/plugins/dotbare
-	url = git@github.com:kazhala/dotbare.git
+	url = https://github.com/kazhala/dotbare.git
 [submodule ".zsh/plugins/ssh-tunnel"]
 	path = .zsh/plugins/ssh-tunnel
-	url = git@github.com:afikrim/zsh-ssh-tunnel.git
+	url = https://github.com/afikrim/zsh-ssh-tunnel.git
 [submodule ".config/nvim"]
 	path = .config/nvim
-	url = git@github.com:afikrim/.config-nvim.git
+	url = https://github.com/afikrim/.config-nvim.git
 	branch = main
 [submodule ".tmux/oh-my-tmux"]
 	path = .tmux/oh-my-tmux
-	url = git@github.com:gpakosz/.tmux.git
+	url = https://github.com/gpakosz/.tmux.git
